# Scil

./: .gitignore  readme.md
scil_driver/: Cargo.toml
scil_driver/src/: alt_syscall_utils.rs  alt_syscalls.rs  callbacks.rs  csq.rs  ioctl.rs  lib.rs  scil_telemetry.rs
scil_engine/: Cargo.toml
scil_engine/src/: ioctl.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  telemetry.rs
