[package]
name = "scil_driver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
thiserror = { version = "2.0.17", default-features = false }
uuid = { version = "1.19.0", features = ["v4", "serde"], default-features = false }
wdk = "0.4.1"
wdk-alloc = "0.4"
wdk-mutex = "1.3.1"
wdk-panic = "0.4"
wdk-sys = "0.5"
shared = { path = "../shared" }

[build-dependencies]
wdk-build = "0.5"
